# mempools-services

./: .gitignore  Cargo.toml  README.md
crates/alert-service/: Cargo.toml
crates/alert-service/src/: lib.rs  storage.rs
crates/alerts/: Cargo.toml
crates/alerts/src/: cosmos.rs  eth.rs  lib.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: config.rs  lib.rs
crates/crawler-service/src/: cosmos_crawler.rs  eth_crawler.rs
crates/db-entities/src/: alert_notification.rs  chain.rs  crawler.rs  destination_registration_proposal.rs  lib.rs  prelude.rs  telegram_chat_id.rs  user_alert.rs  user_destination.rs
crates/db-migration/src/: lib.rs  m20220101_000001_create_table.rs  m20230405_044439_adding_timestamps.rs
crates/destination-service/: Cargo.toml
crates/destination-service/src/: lib.rs  storage.rs
crates/filter-service/src/: lib.rs
crates/gateway-service/: Cargo.toml
crates/gateway-service/src/: admin.rs  lib.rs  public.rs
crates/mempools-api/: Cargo.toml  build.rs
crates/mempools-api/proto/: api.proto
crates/mempools-api/src/: api.rs
crates/notification-service/: Cargo.toml
crates/notification-service/src/: config.rs  lib.rs  notification.rs  storage.rs
crates/request-validation/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  interceptors.rs  main.rs  test_data.rs
crates/util/: Cargo.toml
crates/util/src/: convert.rs  lib.rs  service_registry.rs
deployments/dockerfiles/dev/: Dockerfile
deployments/dockerfiles/prod/: Dockerfile
