[workspace]
members = ["crates/*"]

[workspace.dependencies]
tonic = { version = "0.8.0", features = ["tls", "tls-roots"] }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
cosmrs = { version = "0.11.0", features = ["grpc", "cosmwasm"] }
lettre = "0.10"
tonic-web = "0.5.0"
openidconnect = "2.5.1"
jsonwebtokens-cognito = "0.1.1"
serde = "1.0.162"
serde_json = "1.0.96"
hex = "0.4.3"
base64 = "0.21.0"
reqwest = "0.11.17"
log = "0.4.20"
env_logger = "0.10.0"
prost = "0.11"
tonic-build = "0.8"
tower-http = { version = "0.4.0", features = ["cors", "catch-panic"] }
tonic-reflection = "0.6.0"
rand = "0.8.5"
email_address = "0.2.4"
url = "2.3.1"
cw20-base = "1.0.1"
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot.git", rev = "65ad5cf" }
tokio-stream = "0.1.14"
sea-orm = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { version = "^0", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
] }
tower = "0.4.13"
web3 = "0.18.0"
dyn-clone = "1.0.11"
serenity = "0.11.5"
