[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
util = { path = "../util" }
mempools-api = { path = "../mempools-api" }
tonic.workspace = true
openidconnect.workspace = true
serde.workspace = true
