[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mempools-api = { path = "../mempools-api" }
util = { path = "../util" }
request-validation = { path = "../request-validation" }
tonic.workspace = true